Resized images to load faster when web page is opened

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="img/tholoana-logo.png" alt="DevTholoana logo" />
+        <img src="tholoana-logo.webp" alt="DevTholoana logo" />
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -96,7 +96,7 @@
         </p>
       </div>
       <img
-        src="img/Tholoana.jpg"
+        src="../MyWebsite/img/Tholoana.webp"
         alt="Tholoana working at her desk"
         class="about-me__img" />
     </section>
@@ -122,7 +122,7 @@
             </a>
           </h3>
           <img
-            src="img/commerce.jpg"
+            src="img/commerce.webp"
             alt="E-Commerce Store"
             class="portfolio__img" />
           <p class="project-description">
@@ -143,7 +143,7 @@
             </a>
           </h3>
           <img
-            src="img/game.jpg"
+            src="img/game.webp"
             alt="JavaScript Game"
             class="portfolio__img" />
           <p class="project-description">
@@ -163,7 +163,7 @@
               Movie App <i class="fas fa-arrow-right"></i>
             </a>
           </h3>
-          <img src="img/movie.avif" alt="Movie App" class="portfolio__img" />
+          <img src="img/movie.webp" alt="Movie App" class="portfolio__img" />
           <p class="project-description">
             A stylish movie catelogue app interface built with smooth
             animations.
@@ -206,7 +206,7 @@
             </a>
           </h3>
           <img
-            src="img/learn.jpg"
+            src="img/learn.webp"
             alt="Learning Platform"
             class="portfolio__img" />
           <p class="project-description">
@@ -230,7 +230,7 @@
             </a>
           </h3>
           <img
-            src="img/recipe.jpg"
+            src="img/recipe.webp"
             alt="Recipe Generator"
             class="portfolio__img" />
           <p class="project-description">
@@ -253,7 +253,10 @@
               Weather App <i class="fas fa-arrow-right"></i>
             </a>
           </h3>
-          <img src="img/weather.jpg" alt="Weather App" class="portfolio__img" />
+          <img
+            src="img/weather.webp"
+            alt="Weather App"
+            class="portfolio__img" />
           <p class="project-description">
             A weather dashboard fetching real-time data from an API with a clean
             UI.
