Adding all links and descriptions to projects

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               href="https://your-ecommerce-site.com"
               target="_blank"
               rel="noopener">
-              E-Commerce Store <i class="fas fa-arrow-right"></i>
+              Pinspired <i class="fas fa-arrow-right"></i>
             </a>
           </h3>
           <img
@@ -130,7 +130,10 @@
             functionality.
           </p>
           <div class="project-links">
-            <a href="https://github.com/your-repo1" class="btn" target="_blank"
+            <a
+              href="https://github.com/Tholoana96/Pinspired"
+              class="btn"
+              target="_blank"
               >Github Repo</a
             >
           </div>
@@ -139,7 +142,7 @@
         <div class="portfolio__item">
           <h3 class="project-title">
             <a href="https://your-game-site.com" target="_blank" rel="noopener">
-              JavaScript Game <i class="fas fa-arrow-right"></i>
+              Rocket Blast <i class="fas fa-arrow-right"></i>
             </a>
           </h3>
           <img
@@ -151,7 +154,10 @@
             logic.
           </p>
           <div class="project-links">
-            <a href="https://github.com/your-repo2" class="btn" target="_blank"
+            <a
+              href="https://github.com/Tholoana96/RocketBlast"
+              class="btn"
+              target="_blank"
               >GitHub Repo</a
             >
           </div>
@@ -160,7 +166,7 @@
         <div class="portfolio__item">
           <h3 class="project-title">
             <a href="https://your-music-app.com" target="_blank" rel="noopener">
-              Movie App <i class="fas fa-arrow-right"></i>
+              MovieScout <i class="fas fa-arrow-right"></i>
             </a>
           </h3>
           <img src="img/movie.webp" alt="Movie App" class="portfolio__img" />
@@ -169,7 +175,10 @@
             animations.
           </p>
           <div class="project-links">
-            <a href="https://github.com/your-repo4" class="btn" target="_blank"
+            <a
+              href="https://github.com/Tholoana96/MovieScout"
+              class="btn"
+              target="_blank"
               >GitHub Repo</a
             >
           </div>
@@ -178,7 +187,7 @@
         <div class="portfolio__item">
           <h3 class="project-title">
             <a
-              href="https://your-pizza-site.com"
+              href="https://slicehub-tholoana.netlify.app/"
               target="_blank"
               rel="noopener">
               Slicehub <i class="fas fa-arrow-right"></i>
@@ -193,28 +202,10 @@
             JavaScript.
           </p>
           <div class="project-links">
-            <a href="https://github.com/your-repo5" class="btn" target="_blank"
-              >GitHub Repo</a
-            >
-          </div>
-        </div>
-
-        <div class="portfolio__item">
-          <h3 class="project-title">
-            <a href="https://your-edu-site.com" target="_blank" rel="noopener">
-              Letter Leap <i class="fas fa-arrow-right"></i>
-            </a>
-          </h3>
-          <img
-            src="img/learn.webp"
-            alt="Learning Platform"
-            class="portfolio__img" />
-          <p class="project-description">
-            A responsive learning platform built with accessibility and
-            usability in mind.
-          </p>
-          <div class="project-links">
-            <a href="https://github.com/your-repo3" class="btn" target="_blank"
+            <a
+              href="https://github.com/Tholoana96/Slicehub"
+              class="btn"
+              target="_blank"
               >GitHub Repo</a
             >
           </div>
@@ -223,7 +214,34 @@
         <div class="portfolio__item">
           <h3 class="project-title">
             <a
-              href="https://your-recipe-app.com"
+              href="https://nomcebo1992.github.io/Letter_Leap/"
+              target="_blank"
+              rel="noopener">
+              Letter Leap <i class="fas fa-arrow-right"></i>
+            </a>
+          </h3>
+          <img
+            src="img/learn.webp"
+            alt="Learning Platform"
+            class="portfolio__img" />
+          <p class="project-description">
+            A collaborative responsive learning platform built with
+            accessibility and usability in mind.
+          </p>
+          <div class="project-links">
+            <a
+              href="https://github.com/Nomcebo1992/Letter_Leap"
+              class="btn"
+              target="_blank"
+              >GitHub Repo</a
+            >
+          </div>
+        </div>
+
+        <div class="portfolio__item">
+          <h3 class="project-title">
+            <a
+              href="https://myrecipe-generator.netlify.app/"
               target="_blank"
               rel="noopener">
               Recipe Generator <i class="fas fa-arrow-right"></i>
@@ -238,7 +256,10 @@
             ingredients and steps.
           </p>
           <div class="project-links">
-            <a href="https://github.com/your-repo6" class="btn" target="_blank"
+            <a
+              href="https://github.com/Tholoana96/recipe-generator"
+              class="btn"
+              target="_blank"
               >GitHub Repo</a
             >
           </div>
@@ -247,7 +268,7 @@
         <div class="portfolio__item">
           <h3 class="project-title">
             <a
-              href="https://your-weather-app.com"
+              href="https://tholoana-weather.netlify.app/"
               target="_blank"
               rel="noopener">
               Weather App <i class="fas fa-arrow-right"></i>
@@ -262,7 +283,10 @@
             UI.
           </p>
           <div class="project-links">
-            <a href="https://github.com/your-repo7" class="btn" target="_blank"
+            <a
+              href="https://github.com/Tholoana96/My_Weather_App"
+              class="btn"
+              target="_blank"
               >GitHub Repo</a
             >
           </div>
@@ -271,7 +295,7 @@
         <div class="portfolio__item">
           <h3 class="project-title">
             <a
-              href="https://your-clock-site.com"
+              href="https://tholoana-world-clock.netlify.app/"
               target="_blank"
               rel="noopener">
               World Clock <i class="fas fa-arrow-right"></i>
@@ -286,7 +310,10 @@
             layout.
           </p>
           <div class="project-links">
-            <a href="https://github.com/your-repo8" class="btn" target="_blank"
+            <a
+              href="https://github.com/Tholoana96/World-Clock"
+              class="btn"
+              target="_blank"
               >GitHub Repo</a
             >
           </div>
