Troubleshooting images that dont load when page is opened

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="tholoana-logo.webp" alt="DevTholoana logo" />
+        <img src="img/tholoana-logo.webp" alt="DevTholoana logo" />
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -96,7 +96,7 @@
         </p>
       </div>
       <img
-        src="../MyWebsite/img/Tholoana.webp"
+        src="img/Tholoana.webp"
         alt="Tholoana working at her desk"
         class="about-me__img" />
     </section>
