Final changes made to the projects section with all links acttached and working

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="portfolio__item">
           <h3 class="project-title">
             <a
-              href="https://your-ecommerce-site.com"
+              href="https://pinspired.netlify.app/"
               target="_blank"
               rel="noopener">
               Pinspired <i class="fas fa-arrow-right"></i>
@@ -141,7 +141,10 @@
 
         <div class="portfolio__item">
           <h3 class="project-title">
-            <a href="https://your-game-site.com" target="_blank" rel="noopener">
+            <a
+              href="https://rocket-blast.netlify.app/"
+              target="_blank"
+              rel="noopener">
               Rocket Blast <i class="fas fa-arrow-right"></i>
             </a>
           </h3>
@@ -165,7 +168,10 @@
 
         <div class="portfolio__item">
           <h3 class="project-title">
-            <a href="https://your-music-app.com" target="_blank" rel="noopener">
+            <a
+              href="https://moviescouts.netlify.app/"
+              target="_blank"
+              rel="noopener">
               MovieScout <i class="fas fa-arrow-right"></i>
             </a>
           </h3>
