Link to Rocket Blast game added

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="portfolio__item">
           <h3 class="project-title">
             <a
-              href="https://rocket-blast.netlify.app/"
+              href="https://tholoana96.github.io/RocketBlast/"
               target="_blank"
               rel="noopener">
               Rocket Blast <i class="fas fa-arrow-right"></i>
